@@ -1,16 +1,20 @@
 package com.example.autocodetemplate.ohter.practice.dataStructrue;
 
+import sun.misc.Unsafe;
+
+import java.lang.ref.SoftReference;
+import java.lang.reflect.Field;
 import java.util.ArrayList;
 import java.util.List;
 
 public class outOfMemTest {
-    public static void main(String[] args) {
-//        new outOfMemTest().testDumpOutMem();
+    public static void main(String[] args) throws Exception {
+        new outOfMemTest().testDumpOutMem();
 //        new outOfMemTest().testStackOverFlow();
 //        new outOfMemTest().testOutMemByCreateThread();
 //        new outOfMemTest().testConstantOutMem();
-        new outOfMemTest().testTool();
-
+//        new outOfMemTest().testDirectMemOut();
+//        new outOfMemTest().testTool();
 
 
     }
@@ -29,18 +33,18 @@ public class outOfMemTest {
         }
     }
     /**
-     * 测试堆内存溢出 -Xms -Xmx
+     * 测试堆内存溢出 -Xms20m -Xmx20m -XX:+PrintGCDetails  -XX:+PrintGC -XX:+PrintGCTimeStamps -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=C:\temporary
      */
     public void testDumpOutMem() {
-        List<outTestObj> list = new ArrayList<outTestObj>();
+        List<OomObject> list = new ArrayList<OomObject>();
         while (true) {
-            list.add(new outTestObj());
+            list.add(new OomObject());
         }
     }
 
     int stackLength  = 0;
     /**
-     * 测试方法栈泄漏 -Xss
+     * 测试方法栈泄漏 -Xss2m
      */
     public void testStackOverFlow() {
         System.out.println(stackLength);
@@ -68,13 +72,16 @@ public class outOfMemTest {
     }
 
     /**
-     * 常量池内存溢出 -XX:PermSize=10M -XX:MaxPermSize=10M
+     * 1.6 -XX:PermSize1M -XX:MaxPermSize1M
+     * 1.7以后运行时常量池在堆内存
+     * 常量池内存溢出 -Xms10m -Xmx10m -XX:+PrintGCDetails  -XX:+PrintGC -XX:+PrintGCTimeStamps -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=C:\temporary
      */
     public void testConstantOutMem() {
         List<String> list = new ArrayList<String>();
         Integer i = 1;
         while (true) {
-            list.add(String.valueOf(i++).intern());
+            list.add(new String(i++ + "")); // GC overhead limit exceeded  如果GC花费的时间超过 98%, 并且GC回收的内存少于 2%,  -XX:-UseGCOverheadLimit去掉限制
+//            list.add(String.valueOf(i++).intern());
         }
     }
 
@@ -82,16 +89,23 @@ public class outOfMemTest {
     /**
      * 测试直接内存溢出 -XX:MaxDirectMemorySize=10M
      */
-//    public void testDirectMemOut() {
-//        Field unsafeField = Unsafe.class.getDeclaredFields()[0];
-//        unsafeField.setAccessible(true);
-//        Unsafe unsafe = (Unsafe)unsafeField.get(null);
-//        while (true) {
-//            unsafe.allocateMemory(_1MB);
-//        }
-//    }
-}
-
-class outTestObj {
-
+    public void testDirectMemOut() throws Exception {
+        Field unsafeField = Unsafe.class.getDeclaredFields()[0];
+        unsafeField.setAccessible(true);
+        Unsafe unsafe = (Unsafe)unsafeField.get(null);
+        while (true) {
+            unsafe.allocateMemory(_1MB);
         }
+    }
+
+    /**
+     * reference test
+     */
+    public void reference(){
+        SoftReference<OomObject> soft = new SoftReference<OomObject>(new OomObject());
+
+    }
+}
+class OomObject{
+
+}
